@@ -11,6 +11,7 @@
    methods.
  - Rename 'line' parameter to internal name '_line'.
  - Rename test to right name (parse -> parse_file).
+ - Rewrite API to 'callbacks' hash reference.
 
 0.01 2014-11-18T07:30:12+01:00
  - First version.
